# reference

./: README.md
HarmonyOS-Examples-main/HarmonyOS-Examples-main/AIClassify/entry/src/main/cpp/: CMakeLists.txt  ms_lite.c
HarmonyOS-Examples-main/HarmonyOS-Examples-main/AIClassify/entry/src/main/cpp/types/libentry/: index.cj  oh-package.json5
cjpm相关知识/: cjpm_manual.md
harmony os易错点与修改方法/: HarmonyOS_API命名空间映射关系详解.md  HarmonyOS_Cangjie_项目编译问题修复指南1 (1).md  HarmonyOS_Cangjie_项目编译问题修复指南1 (3).md  HarmonyOS_Cangjie_项目编译问题修复指南1.md  HarmonyOS_Cangjie_项目编译问题修复指南2.md  HarmonyOS_Cangjie_项目编译问题修复指南3.md
报错信息及整改方法/: 01. 出现“ERROR Failed entrydefault@CompileResource”错误，提示某资源文件不存在.md  02. 编译报错“Module xxx has no exported member yyy”.md  03. 编译报错“Could not load ${file1} (imported by ${file2}) Maximum .md  04. 编译报错“Failed to get a resolved OhmUrl by filepath xx”.md  05. 编译报错“Property xxx does not exist on type typeof BuildProfile.md  06. 编译报错“Schema validate failed”.md  07. 编译报错“No available entry module found”.md  08. 编译报错“please check deviceType or distroFilterdistributionFilt.md  09. 编译报错“The reason and usedScene attributes are mandatory for u.md  10. 编译报错“Only one default card can be configured in the form_con.md  11. 编译报错“In the form_config.json file, if the value of the updat.md  12. 编译报错“Property XX does not exist on type typeof BuildProfile”.md  13. 如何解决编译报错“Property xxx does not exist on type typeof BuildPro.md  14. 编译报错“no such file or directory, realpath xxx”.md  16. 工程级build-profile.json5文件.md  17. 模块级build-profile.json5文件.md  21. 编译报错“generate SignerBlock failed”.md  (+37 more)
(+1227 files in other folders)
